src/app.css
html { font-family: "Helvetica Neue Light"; font-size: 62.5%; }
body { background-color: #000; color: #fff; }
html, body, div { margin: 0; padding: 0; }

button, select, input {
  background: #000;
  border: 1px solid rgba(255, 255, 255, 0.6);
  color: #fff;
  font-family: courier;
}
input[type=checkbox] {
  -webkit-appearance: none;
  height: 1em;
  vertical-align: middle;
  width: 1em;
}
input[type=checkbox]:checked { background: rgba(255, 255, 255, 0.75); }
label {
  color: #fff;
  background: #000;
  border: 1px solid #777;
  display: inline-block;
  font-family: courier;
  margin: 0;
  padding: 0.2em 0.4em;
}
label span { margin-right: 0.3em; }

/************************************************************/
/** COMMON *************************************************/

.edit-chrome { display: none; }
.is-editing .edit-chrome { display: block; }

/************************************************************/
/** PRIMARY *************************************************/

.screen {
  box-shadow: 0 0 0 2px #000, 0 0 0 3px #444;
  height: calc((100vw - 4em) * 0.5625);
  margin-left: 2em;
  margin-top: 2em;
  position: relative;
  width: calc(100% - 4em);
}

.slide { height: 100%; }

.shots .shot {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.shots .shot video {
  max-height: 100%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
}

.shots.count-2 .shot:first-child { bottom: 50%; }
.shots.count-2 .shot:last-child { top: 50%; }

/************************************************************/
/** CHROME **************************************************/

.slides { padding: 1em 2em; }
.slides a {
  border-left: 1px solid transparent;
  break-after: avoid-column;
  break-before: avoid-column;
  color: #f0f0f0;
  cursor: default;
  display: block;
  font-size: 1.2em;
  padding-bottom: 0.2em;
  padding-left: 0.5em;
  text-decoration: none;
}
.slides a:hover {
  text-decoration: underline
}
.slides a.major {
  break-before: column;
  color: #fff;
  font-weight: bold;
}
.slides a.checked { border-left-color: #aaa; }

.slides a.drag-above { box-shadow: 0 -1px 0 #fff; }
.slides a.drag-below { box-shadow: 0 1px 0 #fff; }

/************************************************************/
/** EDITING *************************************************/

.projector .add-slide {
  border: none;
  display: none;
  margin-left: 2em;
}
.projector.is-editing .add-slide { display: inline-block; }

.editing {
  height: 6em;
  left: calc(50% - 10em);
  padding-top: 1em;
  position: absolute;
  text-align: center;
  top: 2em;
  width: 20em;
}
.editing button { display: none; }
.is-editing .editing button { display: inline-block; }
.editing:hover button { display: inline-block; }

/** SLIDE EDITOR **************/

.slide-edit {
  bottom: 1em;
  left: 1em;
  position: absolute;
}
.slide-edit input,
.slide-edit select {
  margin: 0;
  outline: none;
  padding: 0.5em;
}
.slide-edit select {
  -webkit-appearance: none;
  border-radius: 0;
  padding-right: 2em;
}

/* left */
.slide-edit .input-major {
  border: 1px solid rgba(255, 255, 255, 0.6);
  display: inline-block;
  font-family: courier;
  padding: 0.5em;
}
.slide-edit .input-major span {
  margin-right: 0.3em;
}

/* right */
.slide-edit.right {
  left: auto;
  right: 0;
}
.slide-edit .clip-selector { position: relative; }
.slide-edit .clip-selector::before {
  border: 1px solid #fff;
  border-left: none;
  border-top: none;
  content: '';
  height: 0.6em;
  position: absolute;
  right: 0.8em;
  top: 0.25em;
  transform: rotate(45deg);
  width: 0.6em;
}
.slide-edit button {
  padding: 0.5em;
  padding-top: 0.4em;
}
.slide-edit .export { margin: 0 1em; }

/** SHOT EDITOR ***************/

.shot-editor .video {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
.shot-editor .delimit { padding: 1em; position: absolute; }
.shot-editor .end {
  display: none;
  right: 0;
  text-align: right;
}
.shot-editor.has-end .end { display: block; }
.shot-editor .delimit.at button { border-color: #098ce5; }
.shot-editor button {
  margin: 0 0.1em 0.5em;
  width: 3em;
}

.shot-editor .inputs {
  left: 1em;
  position: absolute;
  top: 7em;
}

/************************************************************/
/** ANNOTATIONS *********************************************/

.annotation .tools { opacity: 0.3; transition: 0.4s opacity; }
.annotation .tools:hover { opacity: 1; transition: none; }

.text { position: absolute; }
.text:hover { z-index: 1; }
.text .handle {
  height: 6.4em;
  position: absolute;
  right: 100%;
  top: 0;
  width: 1.6em;
}
.text .handle::before {
  background: rgba(128, 128, 128, 0.4);
  content: '';
  display: block;
  height: 6.4em;
  transition: 0.4s background;
  width: 0.5em;
}
.text .handle:hover::before {
  background: rgba(128, 128, 128, 0.9);
  transition: none;
}
.text .content {
  cursor: default;
  font-size: 2vw;
  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
}
.text .tools { margin-top: 0.5em; }
.text.big .content { font-size: 4vw; }
.text.bold .content { font-weight: bold; }
.text.italic .content { font-style: italic; }
.text.mono .content { font-family: courier; }
.text.invert .content { color: rgba(0, 0, 0, 0.8); }
.is-editing .content { cursor: text; }

.rect {
  border: 2px solid rgba(255, 255, 255, 0.6);
  position: absolute;
}
.rect.round { border-radius: 9999px; }
.rect.invert { border-color: rgba(0, 0, 0, 0.8); }
.rect .handle {
  height: 2em;
  position: absolute;
  width: 2em;
}
.rect .handle::before {
  border: 3px solid rgba(128, 128, 128, 0.4);
  content: '';
  display: block;
  height: 0.6em;
  left: 0.4em;
  position: absolute;
  top: 0.4em;
  transition: 0.4s border-color;
  width: 0.6em;
}
.rect .handle:hover::before {
  border-color: rgba(128, 128, 128, 0.9);
  transition: none;
}
.rect .handle.xmin { right: 100%; }
.rect .handle.xmin::before { border-left: none; }
.rect .handle.xmax { left: 100%; }
.rect .handle.xmax::before { border-right: none; }
.rect .handle.ymin { bottom: 100%; }
.rect .handle.ymin::before { border-top: none; }
.rect .handle.ymax { top: 100%; }
.rect .handle.ymax::before { border-bottom: none; }
.rect .tools {
  min-width: 12em;
  padding-top: 1em;
  position: absolute;
  top: 100%;
}

/************************************************************/
/** OTHER ***************************************************/

.init {
  color: #777;
  left: calc(50% - 5em);
  letter-spacing: 0.07em;
  position: absolute;
  text-align: center;
  top: 50%;
  width: 10em;
}

